--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ envlist=
 
 [testenv]
 changedir=testing
-passenv = USER USERNAME
+passenv = USER USERNAME TRAVIS
 deps =
   pycmd
   # to avoid .eggs
